--- a/ai-avatar-next/requirements1.txt
+++ b/ai-avatar-next/requirements1.txt
@@ -14,13 +14,13 @@ livekit-client==2.15.13
 livekit-server-sdk==2.14.0
 
 # Development Dependencies
-typescript==5.x
-@types/node==20.x
-@types/react==19.x
-@types/react-dom==19.x
-tailwindcss==4.x
-@tailwindcss/postcss==4.x
-eslint==9.x
+typescript>=5.0.0,<6.0.0
+types-node>=20.0.0,<21.0.0
+types-react>=19.0.0,<20.0.0
+types-react-dom>=19.0.0,<20.0.0
+tailwindcss>=4.0.0,<5.0.0
+tailwindcss-postcss>=4.0.0,<5.0.0
+eslint>=9.0.0,<10.0.0
 eslint-config-next==16.0.0
 
 # Installation Instructions:
