--- a/ai-avatar-next/requirements1.txt
+++ b/ai-avatar-next/requirements1.txt
@@ -1,8 +1,10 @@
 # Package versions for avatar-ui-next (Next.js/React project)
-# Note: For Node.js projects, dependencies are managed via package.json
-# This file is for reference only - Python-style requirements.txt
+# ⚠️ WARNING: DO NOT USE pip install ON THIS FILE! ⚠️
+# This file contains Node.js packages, NOT Python packages
+# For Node.js projects, dependencies are managed via package.json
 
 # To install all dependencies, run: npm install
+# DO NOT RUN: pip install -r requirements1.txt
 
 # Core Framework
 next==16.0.0
@@ -14,14 +16,15 @@ livekit-client==2.15.13
 livekit-server-sdk==2.14.0
 
 # Development Dependencies
-typescript>=5.0.0,<6.0.0
-types-node>=20.0.0,<21.0.0
-types-react>=19.0.0,<20.0.0
-types-react-dom>=19.0.0,<20.0.0
-tailwindcss>=4.0.0,<5.0.0
-tailwindcss-postcss>=4.0.0,<5.0.0
-eslint>=9.0.0,<10.0.0
-eslint-config-next==16.0.0
+# NOTE: These are Node.js packages - install with npm, not pip
+# typescript>=5.0.0,<6.0.0
+# @types/node>=20.0.0,<21.0.0
+# @types/react>=19.0.0,<20.0.0
+# @types/react-dom>=19.0.0,<20.0.0
+# tailwindcss>=4.0.0,<5.0.0
+# @tailwindcss/postcss>=4.0.0,<5.0.0
+# eslint>=9.0.0,<10.0.0
+# eslint-config-next==16.0.0
 
 # Installation Instructions:
 # 1. Ensure Node.js 18+ is installed
